--- a/src/styles.css
+++ b/src/styles.css
@@ -138,3 +138,191 @@ li {
 .hidden {
   display: none;
 }
+.is-hidden {
+  opacity: 0;
+  transform: scale(1.1);
+  pointer-events: none;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form {
+  position: relative;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  max-width: 500px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+.modal-form-title {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.modal-form-input,
+.modal-form-textarea {
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+.modal-form-input {
+  position: relative;
+  height: 40px;
+  width: 350px;
+}
+.modal-form-textarea {
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 40px;
+  resize: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+}
+.modal-label {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 0.86;
+  /* identical to box height */
+
+  letter-spacing: 0.01em;
+  /* display: flex; */
+  position: absolute;
+  padding-left: 42px;
+}
+.modal-form-input:not(:placeholder-shown) + .modal-label,
+.modal-form-input:focus + .modal-label,
+.modal-form-input:hover + .modal-label {
+  color: rgb(79, 183, 252);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-40%, -300%);
+}
+
+.modal-form-input + .modal-label {
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(0%, 0%);
+}
+
+.modal-form-input:not(:placeholder-shown),
+.modal-form-input:focus,
+.modal-form-input:hover {
+  fill: rgb(79, 183, 252);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn-submit {
+  display: block;
+  width: 100px;
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 0.53;
+  color: rgb(79, 183, 252);
+  background-color: rgb(79, 183, 252);
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+.modal-checkbox-container {
+  /* position: relative; */
+  margin-bottom: 30px;
+  padding-left: 25px;
+  /* padding-right: 50px; */
+}
+.modal-custom-checkbox {
+  position: absolute;
+  display: inline-block;
+  bottom: 119px;
+  left: 40px;
+  width: 15px;
+  height: 14px;
+  fill: rgb(79, 183, 252);
+  border: solid 2px rgb(79, 183, 252);
+  border-radius: 15%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-checkbox:checked ~ .modal-custom-checkbox {
+  background-color: rgb(79, 183, 252);
+  border: solid 2px rgb(79, 183, 252);
+}
+.modal-form-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.modal-form-checkbox-title {
+  text-align: start;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.03em;
+  color: rgb(79, 183, 252);
+
+  letter-spacing: 0.03em;
+}
+.modal-form-title-link {
+  color: rgb(79, 183, 252);
+}
+.modal-form-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+  box-sizing: border-box;
+  margin-bottom: 28px;
+}
+.close-btn {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+}
+.material-icons.color-blue {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.material-icons.color-blue:hover {
+  color: rgb(79, 183, 252);
+}
