--- a/src/template/card.hbs
+++ b/src/template/card.hbs
@@ -1,14 +1,15 @@
 {{#each this}}
-<div class="contact">
+<div class="contact" data-id="{{id}}">
         <h1 class="contact__title">{{name}} {{lastname}}</h1>
         <div class="contact__btn">
-          <button type="button" class="contact__btn-delete">
+          <button type="button" class="contact__btn-delete" data-id="{{id}}">
             <i class="material-icons btn">clear</i>
           </button>
-          <button type="button" class="contact__btn-edit">
+          <button type="button" class="contact__btn-edit"
+        data-id="{{id}}">
             <i class="material-icons btn">create</i>
           </button>
-          <button type="button" class="contact__btn-save">
+          <button type="button" class="contact__btn-save" data-id="{{id}}">
             <i class="material-icons btn">done</i>
           </button>
         </div>
@@ -30,7 +31,6 @@
               <p class="contact__element-second-name__title">
                 {{email}}
               </p>
-              <p class="hidden">{{id}}</p>
             </div>
           </li>
         </ul>
