--- a/src/styles.css
+++ b/src/styles.css
@@ -326,3 +326,60 @@ li {
 .material-icons.color-blue:hover {
   color: rgb(79, 183, 252);
 }
+.statement {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 70px;
+  padding-top: 10px;
+  background-color: #fff;
+  border-radius: 4px;
+  transform: translate(-50%, -50%);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.statement__title {
+  font-size: 13px;
+  margin: 0;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.statement__wrapper {
+  text-align: center;
+}
+.statement__btn-yes {
+  margin-right: 20px;
+}
+.statement__btn-yes:hover,
+.statement__btn-yes:focus,
+.statement__btn-no:hover,
+.statement__btn-no:focus {
+  background-color: rgb(79, 183, 252);
+  color: rgb(255, 255, 255);
+}
+.statement__btn-no,
+.statement__btn-yes {
+  height: 20px;
+  width: 60px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 13px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.statement-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hidden-statement {
+  opacity: 0;
+  transform: scale(1.1);
+  pointer-events: none;
+}
