--- a/src/template/card.hbs
+++ b/src/template/card.hbs
@@ -9,27 +9,35 @@
         data-id="{{id}}">
             <i class="material-icons btn">create</i>
           </button>
-          <button type="button" class="contact__btn-save" data-id="{{id}}">
-            <i class="material-icons btn">done</i>
+          <button type="button" class="field-add-btn open" data-id={{id}} ><i class="material-icons">add</i></button>
+            
           </button>
         </div>
 
         <ul class="contact__list">
-          <li class="contact__element">
-            <div class="contact__element-name">
+          <li class="contact__element" data-id="{{id}}">
+            <div class="contact__element-name" data-id={{id}}>
               <p class="contact__element-name__title">Имя</p>
               <p class="contact__element-name__title">Фамилия</p>
               <p class="contact__element-name__title">Номер телефона</p>
               <p class="contact__element-name__title">e-mail</p>
+              <p class="contact__element-name__title" data-tid="1">Рабочий адрес</p>
+              <p class="contact__element-name__title" data-tid="3">Организация</p>
+              <p class="contact__element-name__title" data-tid="4">Заметка</p>
+              
             </div>
           </li>
           <li class="contact__element">
-            <div class="contact__element-second-name">
-              <p class="contact__element-second-name__title">{{name}}</p>
+            <div class="contact__element-second-name" data-id={{id}}>
+              <p class="contact__element-second-name__title" >{{name}}</p>
               <p class="contact__element-second-name__title">{{lastname}}</p>
               <p class="contact__element-second-name__title">{{number}}</p>
               <p class="contact__element-second-name__title">
                 {{email}}
+              <p class="contact__element-second-name__title" data-tid="1">{{work}}</p><button class="btn-remove-field"><i class="material-icons">clear</i></button>
+              <p class="contact__element-second-name__title" data-tid="3">{{organization}}</p>
+              <p class="contact__element-second-name__title" data-tid="4">{{note}}</p>                              
+              
               </p>
             </div>
           </li>
