--- a/src/template/card.hbs
+++ b/src/template/card.hbs
@@ -9,7 +9,7 @@
         data-id="{{id}}">
             <i class="material-icons btn">create</i>
           </button>
-          <button type="button" class="field-add-btn open" data-id={{id}} ><i class="material-icons">add</i></button>
+          <button type="button" class="field-add-btn open hidden" data-id={{id}} ><i class="material-icons">add</i></button>
             
           </button>
         </div>
@@ -21,7 +21,7 @@
               <p class="contact__element-name__title">Фамилия</p>
               <p class="contact__element-name__title">Номер телефона</p>
               <p class="contact__element-name__title">e-mail</p>
-              <p class="contact__element-name__title" data-tid="1">Рабочий адрес</p>
+              <p class="contact__element-name__title" data-tid="1">Должность</p>
               <p class="contact__element-name__title" data-tid="3">Организация</p>
               <p class="contact__element-name__title" data-tid="4">Заметка</p>
               
@@ -34,9 +34,9 @@
               <p class="contact__element-second-name__title">{{number}}</p>
               <p class="contact__element-second-name__title">
                 {{email}}
-              <p class="contact__element-second-name__title" data-tid="1">{{work}}</p><button class="btn-remove-field"><i class="material-icons">clear</i></button>
-              <p class="contact__element-second-name__title" data-tid="3">{{organization}}</p>
-              <p class="contact__element-second-name__title" data-tid="4">{{note}}</p>                              
+              <p class="contact__element-second-name__title" data-tid="1">{{Должность}}</p>
+              <p class="contact__element-second-name__title" data-tid="3">{{Организация}}</p>
+              <p class="contact__element-second-name__title" data-tid="4">{{Заметка}}</p>                              
               
               </p>
             </div>
