--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background-color: rgb(185, 185, 185);
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -25,6 +25,7 @@ li {
   width: 1200px;
   padding-top: 20px;
   margin: 0 auto;
+  padding-bottom: 20px;
 }
 .contact {
   position: relative;
@@ -118,11 +119,12 @@ li {
   position: absolute;
   display: inline-block;
   top: 5px;
-  left: 464px;
+  left: 510px;
 }
 
 .contact__btn-delete,
-.contact__btn-edit {
+.contact__btn-edit,
+.field-add-btn {
   cursor: pointer;
   margin-right: 5px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -133,7 +135,7 @@ li {
 .contact__btn-edit:hover {
   background-color: rgb(123, 202, 255);
 }
-.contact__btn-save:hover {
+.field-add-btn:hover {
   background-color: rgb(0, 255, 98);
 }
 .hidden {
@@ -151,7 +153,7 @@ li {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 102;
   background: rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -374,7 +376,7 @@ li {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 102;
   background: rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -391,6 +393,7 @@ li {
 }
 .wrapper-main-btn {
   display: flex;
+  justify-content: center;
   top: 32px;
   right: 30%;
   height: 34px;
@@ -398,7 +401,7 @@ li {
   margin-bottom: 30px;
 }
 .create-btn {
-  margin-right: 362px;
+  margin-right: 50px;
 }
 .create-btn,
 .create-btn-clear {
@@ -432,5 +435,72 @@ li {
 .create-field-info:placeholder-shown {
   padding-left: 20px;
 }
-.btn-remove-field {
+.header {
+  background-color: rgb(46, 46, 46);
+  width: 100%;
+}
+.header__title {
+  position: relative;
+  display: inline-block;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: start;
+  line-height: 14px;
+  letter-spacing: 0.03em;
+  color: white;
+}
+.header__title::after {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 15px;
+  content: "";
+  height: 5px;
+  width: 100%;
+  border-radius: 2px;
+  background-color: rgb(123, 202, 255);
+}
+.main__wrapper {
+  position: absolute;
+  z-index: 101;
+  top: 258px;
+  left: 900px;
+  width: 300px;
+  padding: 15px 15px 15px 15px;
+  border: solid 1px;
+  border-color: rgb(123, 202, 255);
+  border-radius: 4px;
+}
+.main__title::after {
+  display: block;
+  position: absolute;
+  left: 13px;
+  bottom: 145px;
+  content: "";
+  height: 4px;
+  width: 59%;
+  border-radius: 2px;
+  background-color: rgb(123, 202, 255);
+}
+.main__title {
+  margin: 0;
+  margin-bottom: 20px;
+  line-height: 14px;
+  letter-spacing: 0.03em;
+}
+.main__text {
+  font-size: 13px;
+  line-height: 14px;
+  letter-spacing: 0.03em;
+}
+.contact {
+  overflow: hidden;
+}
+.contact__list {
+  position: relative;
+  /* top: 10px; */
 }
