Вырезана функция добавления полей

--- a/src/template/card.hbs
+++ b/src/template/card.hbs
@@ -21,9 +21,9 @@
               <p class="contact__element-name__title">Фамилия</p>
               <p class="contact__element-name__title">Номер телефона</p>
               <p class="contact__element-name__title">e-mail</p>
-              <p class="contact__element-name__title" data-tid="1">Должность</p>
+              {{!-- <p class="contact__element-name__title" data-tid="1">Должность</p>
               <p class="contact__element-name__title" data-tid="3">Организация</p>
-              <p class="contact__element-name__title" data-tid="4">Заметка</p>
+              <p class="contact__element-name__title" data-tid="4">Заметка</p> --}}
               
             </div>
           </li>
@@ -34,9 +34,9 @@
               <p class="contact__element-second-name__title">{{number}}</p>
               <p class="contact__element-second-name__title">
                 {{email}}
-              <p class="contact__element-second-name__title" data-tid="1">{{Должность}}</p>
+              {{!-- <p class="contact__element-second-name__title" data-tid="1">{{Должность}}</p>
               <p class="contact__element-second-name__title" data-tid="3">{{Организация}}</p>
-              <p class="contact__element-second-name__title" data-tid="4">{{Заметка}}</p>                              
+              <p class="contact__element-second-name__title" data-tid="4">{{Заметка}}</p>                               --}}
               
               </p>
             </div>
