--- a/src/styles.css
+++ b/src/styles.css
@@ -381,16 +381,42 @@ li {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.statement__btn-yes-clear {
+  margin-right: 20px;
+}
+.statement__btn-yes-clear:hover,
+.statement__btn-yes-clear:focus,
+.statement__btn-no-clear:hover,
+.statement__btn-no-clear:focus {
+  background-color: rgb(79, 183, 252);
+  color: rgb(255, 255, 255);
+}
+.statement__btn-no-clear,
+.statement__btn-yes-clear {
+  height: 20px;
+  width: 60px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 13px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.statement-backdrop-clear {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 102;
+  background: rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .hidden-statement {
   opacity: 0;
   transform: scale(1.1);
   pointer-events: none;
 }
-.field-add-btn {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-}
+
 .wrapper-main-btn {
   display: flex;
   justify-content: center;
