--- a/src/styles.css
+++ b/src/styles.css
@@ -431,6 +431,7 @@ li {
 }
 .create-btn,
 .create-btn-clear {
+  cursor: pointer;
   border-radius: 4px;
   width: 120px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
