--- a/src/styles.css
+++ b/src/styles.css
@@ -445,12 +445,14 @@ li {
   background-color: rgb(201, 24, 24);
 }
 .create-field-wrapper {
-  position: relative;
+  position: absolute;
+  left: 900px;
   z-index: 100;
 }
 .create-field-name,
 .create-field-info,
 .create-field-item {
+  display: flex;
   height: 40px;
   width: 300px;
   padding-left: 20px;
@@ -494,7 +496,7 @@ li {
 .main__wrapper {
   position: absolute;
   z-index: 101;
-  top: 258px;
+  top: 275px;
   left: 900px;
   width: 300px;
   padding: 15px 15px 15px 15px;
@@ -530,4 +532,16 @@ li {
 .contact__list {
   position: relative;
   /* top: 10px; */
+}
+.contact__create-wrapper {
+  position: absolute;
+  margin-bottom: 30px;
+  left: 700px;
+  border: solid 1px;
+  border-radius: 4px;
+  border-color: rgb(129, 212, 238);
+  padding: 20px;
+}
+.create-field-name {
+  display: flex;
 }
