--- a/src/template/card.hbs
+++ b/src/template/card.hbs
@@ -21,7 +21,11 @@
               <p class="contact__element-name__title">Фамилия</p>
               <p class="contact__element-name__title">Номер телефона</p>
               <p class="contact__element-name__title">e-mail</p>
-              {{!-- <p class="contact__element-name__title">{{#each this}}{{value}}{{/each}}</p> --}}
+<p class="contact__element-name__title">{{#field1}}{{value}}{{/field1}}</p>
+<p class="contact__element-name__title">{{#field2}}{{value}}{{/field2}}</p>
+<p class="contact__element-name__title">{{#field3}}{{value}}{{/field3}}</p>
+<p class="contact__element-name__title">{{#field4}}{{value}}{{/field4}}</p>
+<p class="contact__element-name__title">{{#field5}}{{value}}{{/field5}}</p>
               
             </div>
           </li>
@@ -30,12 +34,12 @@
               <p class="contact__element-second-name__title" >{{name}}</p>
               <p class="contact__element-second-name__title">{{lastname}}</p>
               <p class="contact__element-second-name__title">{{number}}</p>
-              <p class="contact__element-second-name__title">
-                {{email}}
-             
-              
-              </p>
-            
+              <p class="contact__element-second-name__title">{{email}}</p>
+              <p class="contact__element-second-name__title">{{#field1}}{{info}}{{/field1}}</p>
+              <p class="contact__element-second-name__title">{{#field2}}{{info}}{{/field2}}</p>
+              <p class="contact__element-second-name__title">{{#field3}}{{info}}{{/field3}}</p>
+              <p class="contact__element-second-name__title">{{#field4}}{{info}}{{/field4}}</p>
+              <p class="contact__element-second-name__title">{{#field5}}{{info}}{{/field5}}</p>
             </div>
           </li>
         </ul>
