--- a/src/styles.css
+++ b/src/styles.css
@@ -119,7 +119,7 @@ li {
   position: absolute;
   display: inline-block;
   top: 5px;
-  left: 510px;
+  left: 465px;
 }
 
 .contact__btn-delete,
@@ -426,32 +426,49 @@ li {
   margin: auto;
   margin-bottom: 30px;
 }
-.create-btn {
+.create-btn,
+.create-btn-edit {
   margin-right: 50px;
 }
 .create-btn,
-.create-btn-clear {
+.create-btn-clear,
+.create-btn-edit,
+.create-btn-clear-edit {
   cursor: pointer;
   border-radius: 4px;
   width: 120px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .create-btn:hover,
-.create-btn:focus {
+.create-btn:focus,
+.create-btn-edit:hover,
+.create-btn-edit:focus {
   background-color: rgb(79, 183, 252);
 }
 .create-btn-clear:hover,
-.create-btn-clear:focus {
+.create-btn-clear:focus,
+.create-btn-clear-edit:hover,
+.create-btn-clear-edit:focus {
   background-color: rgb(201, 24, 24);
 }
-.create-field-wrapper {
-  position: absolute;
-  left: 900px;
+.create-field-wrapper,
+.create-field-wrapper-edit {
+  position: fixed;
+  padding: 40px;
+  top: 50%;
+  left: 50%;
   z-index: 100;
+  transform: translate(-50%, -50%);
+  border: solid 1px;
+  border-color: rgb(201, 24, 24);
+  border-radius: 4px;
 }
 .create-field-name,
 .create-field-info,
-.create-field-item {
+.create-field-item,
+.create-field-name-edit,
+.create-field-info-edit,
+.create-field-item-edit {
   display: flex;
   height: 40px;
   width: 300px;
@@ -461,8 +478,34 @@ li {
   border-color: rgb(79, 183, 252);
 }
 .create-field-name:placeholder-shown,
-.create-field-info:placeholder-shown {
+.create-field-info:placeholder-shown,
+.create-field-name-edit:placeholder-shown,
+.create-field-info-edit:placeholder-shown {
   padding-left: 20px;
+}
+.create-field-save-btn,
+.create-field-close-btn,
+.create-field-save-btn-edit {
+  height: 30px;
+  width: 90px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.create-field-save-btn:hover,
+.create-field-save-btn:focus,
+.create-field-close-btn:hover,
+.create-field-close-btn:focus,
+.create-field-save-btn-edit:hover,
+.create-field-save-btn-edit:focus,
+.create-field-close-btn-edit:hover,
+.create-field-close-btn-edit:focus {
+  background-color: rgb(79, 183, 252);
+}
+
+.create-field-save-btn,
+.create-field-save-btn-edit {
+  margin-right: 115px;
 }
 .header {
   background-color: rgb(46, 46, 46);
@@ -497,7 +540,7 @@ li {
   position: absolute;
   z-index: 101;
   top: 275px;
-  left: 900px;
+  left: 940px;
   width: 300px;
   padding: 15px 15px 15px 15px;
   border: solid 1px;
@@ -560,4 +603,15 @@ li {
 }
 .btn-edit-name:hover {
   color: rgb(129, 212, 238);
+}
+.contact__wrapper-create {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 102;
+  background: rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
