--- a/src/template/card.hbs
+++ b/src/template/card.hbs
@@ -40,23 +40,32 @@
               <p class="contact__element-second-name__title">{{email}}</p>
               <div class="contact__field-wrapper">   
                 <p class="contact__element-second-name__title">{{#field1}}{{info}}{{/field1}}</p>
-                <button type="button" class="btn-edit-name field1"data-id={{id}}><i class="material-icons">edit</i></button>
+                <button type="button" class="btn-edit-name field1"data-id={{id}}><i class="material-icons edit field">edit</i></button>
+                 <button type="button" class="btn-delete-name field1"data-id={{id}}><i class="material-icons field">clear</i></button>
               </div>
               <div class="contact__field-wrapper">   
                 <p class="contact__element-second-name__title">{{#field2}}{{info}}{{/field2}}</p>
-                <button type="button" class="btn-edit-name field2"data-id={{id}}><i class="material-icons">edit</i></button>
+                <button type="button" class="btn-edit-name field2"data-id={{id}}><i class="material-icons edit field">edit</i></button>
+                <button type="button" class="btn-delete-name field2"data-id={{id}}><i class="material-icons field">clear</i></button>
+
               </div>
               <div class="contact__field-wrapper">   
                 <p class="contact__element-second-name__title">{{#field3}}{{info}}{{/field3}}</p>
-                <button type="button" class="btn-edit-name field3"data-id={{id}}><i class="material-icons">edit</i></button>
+                <button type="button" class="btn-edit-name field3"data-id={{id}}><i class="material-icons edit field">edit</i></button>
+                <button type="button" class="btn-delete-name field3"data-id={{id}}><i class="material-icons field">clear</i></button>
+
               </div>
               <div class="contact__field-wrapper">   
                 <p class="contact__element-second-name__title">{{#field4}}{{info}}{{/field4}}</p>
-                <button type="button" class="btn-edit-name field4"data-id={{id}}><i class="material-icons">edit</i></button>
+                <button type="button" class="btn-edit-name field4"data-id={{id}}><i class="material-icons edit field">edit</i></button>
+                <button type="button" class="btn-delete-name field4"data-id={{id}}><i class="material-icons field">clear</i></button>
+
               </div>
               <div class="contact__field-wrapper">   
                 <p class="contact__element-second-name__title">{{#field5}}{{info}}{{/field5}}</p>
-                <button type="button" class="btn-edit-name field5"data-id={{id}}><i class="material-icons">edit</i></button>
+                <button type="button" class="btn-edit-name field5"data-id={{id}}><i class="material-icons edit field">edit</i></button>
+                <button type="button" class="btn-delete-name field5"data-id={{id}}><i class="material-icons field">clear</i></button>
+
               </div>
 
              
