--- a/src/styles.css
+++ b/src/styles.css
@@ -455,13 +455,14 @@ li {
 .create-field-wrapper-edit {
   position: fixed;
   padding: 40px;
-  top: 50%;
+  padding-top: 20px;
+  top: 40%;
   left: 50%;
   z-index: 100;
   transform: translate(-50%, -50%);
   border: solid 1px;
-  border-color: rgb(201, 24, 24);
   border-radius: 4px;
+  background-color: rgb(133, 131, 131, 0.8);
 }
 .create-field-name,
 .create-field-info,
@@ -485,7 +486,8 @@ li {
 }
 .create-field-save-btn,
 .create-field-close-btn,
-.create-field-save-btn-edit {
+.create-field-save-btn-edit,
+.create-field-close-btn-edit {
   height: 30px;
   width: 90px;
   border-radius: 4px;
@@ -506,6 +508,13 @@ li {
 .create-field-save-btn,
 .create-field-save-btn-edit {
   margin-right: 115px;
+}
+.create-field-wrapper-title {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 15px;
 }
 .header {
   background-color: rgb(46, 46, 46);
@@ -592,19 +601,31 @@ li {
   position: relative;
   display: flex;
 }
-.btn-edit-name {
+.btn-edit-name,
+.btn-delete-name {
   position: absolute;
-  left: 270px;
-  top: -9px;
+
   border: none;
   background-color: transparent;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
+.btn-delete-name {
+  left: 275px;
+  top: -3px;
+}
+.btn-edit-name {
+  left: 240px;
+  top: -2px;
+}
 .btn-edit-name:hover {
   color: rgb(129, 212, 238);
 }
-.contact__wrapper-create {
+.btn-delete-name:hover {
+  color: rgb(245, 0, 0);
+}
+.contact__wrapper-create,
+.contact__wrapper-create-edit {
   position: fixed;
   top: 0;
   left: 0;
@@ -614,4 +635,13 @@ li {
   background: rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.material-icons.field {
+  padding-top: 2px;
+  font-size: 20px;
+}
+.material-icons.edit {
+  font-size: 15px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
